<resources>
    <string name="app_name">Backstage</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtButtonRegister">Register</string>
    <string name="txtButtonLogin">Login</string>
    <string name="texteIntroduction">Welcome on Backstage !!</string>
    <string name="txtLogin">Login</string>
    <string name="hintEmail">Email</string>
    <string name="hintPassword">Password</string>
    <string name="hintPseudo">Pseudo</string>
    <string name="txtLoginButton">Login</string>
    <string name="txtTextViewPseudo">Your Pseudo</string>
</resources>
