<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gobelinscrm14.noemiediaz.backstage.home.InitialHomeFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logo"
        android:src="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/logoMarginTop"
        android:layout_marginBottom="@dimen/logoMarginBottom" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/texteIntroduction"
        android:id="@+id/textIntroduction"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="@dimen/buttonHeight"
        android:text="@string/txtButtonRegister"
        android:id="@+id/buttonRegister"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/buttonMarginLeft"
         />

    <Button
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="@dimen/buttonHeight"
        android:text="@string/txtButtonLogin"
        android:id="@+id/buttonLogin"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/buttonMarginRight"
        />

</RelativeLayout>
