<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gobelinscrm14.noemiediaz.backstage.home.user.RegisterFragment">


    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal|top"
        >
        <EditText
            android:layout_width="@dimen/editTxtWidth"
            android:layout_height="wrap_content"
            android:id="@+id/registerPseudo"
            android:hint="@string/hintPseudo"
            android:color="@color/colorPrimaryDark"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal|center"
        >

        <EditText
            android:layout_width="@dimen/editTxtWidth"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/registerEmail"
            android:hint="@string/hintEmail" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:layout_centerHorizontal="true">

        <EditText
            android:layout_width="@dimen/editTxtWidth"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/registerPassword"
            android:hint="@string/hintPassword"
            />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="@dimen/buttonHeight"
        android:text="Register"
        android:id="@+id/registerButton"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimaryDark"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
